<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FCE4"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/status"
        android:layout_width="@dimen/line_txt_length"
        android:layout_height="@dimen/line_height"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:text="@string/status"
        android:textColor="@color/colorText"
        android:textSize="@dimen/large_txt"/>


    <RadioGroup
        android:id="@+id/status_radio_group"
        android:layout_width="match_parent"
        android:layout_height="87dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height">

            <RadioButton
                android:id="@+id/assigned"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:layout_width="@dimen/fifteen"
                android:layout_height="52dp"
                android:layout_marginLeft="@dimen/large"
                android:text="@string/assign_it"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

            <RadioButton
                android:id="@+id/pending"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:layout_width="@dimen/fifteen"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/large"
                android:checked="true"
                android:text="@string/pending"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_size">

            <RadioButton
                android:id="@+id/planned"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:layout_width="@dimen/fifteen"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/large"
                android:text="@string/planned"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

            <RadioButton
                android:id="@+id/solved"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:layout_width="@dimen/fifteen"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/large"
                android:text="@string/solved"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/urgency"
        android:layout_width="@dimen/line_txt_length"
        android:layout_height="@dimen/line_height"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/xxsmall"
        android:text="@string/urgency"
        android:textColor="@color/colorText"
        android:textSize="@dimen/large_txt"/>

    <RadioGroup
        android:id="@+id/urgency_radio_group"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height">

            <RadioButton
                android:id="@+id/very_high"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/xsmall"
                android:text="@string/veryHigh"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

            <RadioButton
                android:id="@+id/high"
                android:layout_width="@dimen/btn_padding02"
                android:layout_height="match_parent"
                android:text="@string/high"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="@dimen/radio_length"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/medium"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height">

            <RadioButton
                android:id="@+id/low"
                android:layout_width="@dimen/radio_length"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/low"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

            <RadioButton
                android:id="@+id/very_low"
                android:layout_width="@dimen/radio_length"
                android:layout_height="match_parent"
                android:text="@string/verylow"
                android:textColor="@color/colorText"
                android:textSize="@dimen/check_txt" />

        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/parts_Used"
        android:layout_width="@dimen/line_txt_length"
        android:layout_height="@dimen/line_height"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/xxsmall"
        android:text="@string/parts_used"
        android:textColor="@color/colorText"
        android:textSize="@dimen/large_txt"/>

    <EditText
        android:id="@+id/parts_used_textfield"
        android:layout_width="@dimen/long_line"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/solutions"
        android:layout_width="@dimen/long_line"
        android:layout_height="@dimen/line_height"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/xxsmall"
        android:text="@string/solution"
        android:textColor="@color/colorText"
        android:textSize="@dimen/large_txt"/>


    <EditText
        android:id="@+id/location_textfield"
        android:layout_width="@dimen/long_line"
        android:layout_height="@dimen/line_height"
        android:layout_marginStart="@dimen/small"
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/xsmall">

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/header_size"
            android:layout_marginEnd="@dimen/inline_spacing"
            android:background="@color/colorBtn"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17sp" />


        <Button
            android:id="@+id/forward"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small"
            android:background="@color/colorBtn"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:textSize="17sp"/>


    </LinearLayout>


</LinearLayout>