<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FCE4"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/img_para"
        android:layout_height="@dimen/img_para"
        android:layout_marginTop="@dimen/padding_Top"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_menu_gallery" />


    <LinearLayout
        android:id="@+id/job_Order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/xsmall">

        <TextView
            android:layout_width="@dimen/line_txt_length"
            android:layout_height="match_parent"
            android:text="@string/job_order"
            android:textColor="@color/colorText"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/padding_Left"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/xsmall">

        <TextView
            android:layout_width="@dimen/line_txt_length"
            android:layout_height="match_parent"
            android:text="@string/date_ask"
            android:textColor="@color/colorText"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/padding_Left"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/requester"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/xsmall">

        <TextView
            android:layout_width="@dimen/line_txt_length"
            android:layout_height="match_parent"
            android:textColor="@color/colorText"
            android:text="@string/requester"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/padding_Left"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/john_doe" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/xsmall">

        <TextView
            android:layout_width="@dimen/line_txt_length"
            android:layout_height="match_parent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/padding_Left"
            android:text="@string/contact"/>


        <EditText
            android:id="@+id/editText3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/contact_dummy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/xsmall">

        <TextView
            android:layout_width="@dimen/line_txt_length"
            android:layout_height="match_parent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/button_text"
            android:layout_marginStart="@dimen/padding_Left"
            android:text="@string/location"/>


        <EditText
            android:id="@+id/editText7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/location_dummy" />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/assignedTo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/xsmall">

        <TextView
                android:layout_width="@dimen/line_txt_length"
                android:layout_height="match_parent"
                android:textColor="@color/colorText"
                android:textSize="@dimen/button_text"
                android:layout_marginStart="@dimen/padding_Left"
                android:text="@string/assigned"/>


        <EditText
            android:id="@+id/editText8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/assigned_dummy" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/xsmall">

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/header_size"
            android:layout_marginEnd="@dimen/inline_spacing"
            android:layout_marginTop="@dimen/header_size"
            android:background="@color/colorBtn"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17sp" />


        <Button
            android:id="@+id/forward"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:layout_marginStart="@dimen/inline_spacing"
            android:layout_marginTop="@dimen/small"
            android:background="@color/colorBtn"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:textSize="17sp"/>


    </LinearLayout>


</LinearLayout>