<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FCE4"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    tools:context=".MainActivity">


    />


    <com.github.gcacace.signaturepad.views.SignaturePad
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:id="@+id/tech_signaturePad"/>


    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtn"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_height"
        android:text="@string/tech_sig"
        android:textSize="@dimen/large"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorText"/>


    <ImageView
        android:id="@+id/client_signaturePad"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="@dimen/large"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/random_signature" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_height"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/client_sig"
        android:textSize="@dimen/large"
        android:textColor="@color/colorText"/>

    <Button
        android:id="@+id/technician"
        android:layout_width="@dimen/btn_para_length"
        android:layout_height="@dimen/btn_para_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_text"
        android:background="@color/colorBtn"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_size"
        android:layout_marginTop="@dimen/header_size"
        android:layout_marginEnd="@dimen/inline_spacing"
        android:background="@color/colorBtn"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="visible" />


</LinearLayout>